[project]
name = "langgraph-checkpoint-cassandra"
version = "0.1.0"
description = "LangGraph checkpointer for Cassandra"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=0.6.9",
    "cassandra-driver",
    "pyyaml>=6.0.3",
    "hypothesis>=6.140.3",
    "uuid6>=2025.0.1",
]

[project.optional-dependencies]
async = [
    "cassandra-asyncio-driver>=0.1.4",
]

[build-system]
requires = ["uv_build>=0.8.24,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""

[dependency-groups]
dev = [
    "cassandra-driver>=3.29.2",
    "cassandra-asyncio-driver>=0.1.4",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "ruff>=0.8.6",
]

[tool.ruff]
lint.select = [
  "E",  # pycodestyle
  "F",  # Pyflakes
  "UP", # pyupgrade
  "B",  # flake8-bugbear
  "I",  # isort
]
lint.ignore = ["E501", "B008"]

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"
# Indent with spaces
indent-style = "space"
# Respect magic trailing comma
skip-magic-trailing-comma = false
# Automatically detect line ending
line-ending = "auto"
